--- a/2counselor.html
+++ b/2counselor.html
@@ -8,14 +8,14 @@
 <div align="center">
   <p style="font-family: 'Noto Sans KR', sans-serif;">사랑가득 기쁨가득 행복가득</p>
   <h2 style="margin-top:-10px; font-family: 'Noto Sans KR', sans-serif;">
-    <a href="우리아이 목차.html">우리아이상담연구소</a></h2>
+    <a href="index.html">우리아이상담연구소</a></h2>
   <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
 
-  <p><a href="우리아이 1.html">처음 오신 분들께</a></p>
-  <p><a href="우리아이 2.html">상담전문가 소개</a></p>
-  <p><a href="우리아이 3.html">프로그램</a></p>
-  <p><a href="우리아이 4.html">찾아오시는 길</a></p>
-  <img src="허순매상담사.png" width="200px" alt="허순매 상담사">
+  <p><a href="1aboutus.html">처음 오신 분들께</a></p>
+  <p><a href="2counselor.html">상담전문가 소개</a></p>
+  <p><a href="3programs.html">프로그램</a></p>
+  <p><a href="4location.html">찾아오시는 길</a></p>
+  <img src="profilepic.png" width="200px" alt="허순매 상담사">
  <p>초등전문 상담사 허순매 소장</p>
 
  <p>약력</p>
