--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <div align="center">
   <p style="font-family: 'Noto Sans KR', sans-serif;">사랑가득 기쁨가득 행복가득</p>
   <h2 style="margin-top:-10px; font-family: 'Noto Sans KR', sans-serif;">
-    <a href="우리아이 목차.html">우리아이상담연구소</a></h2>
+    <a href="index.html">우리아이상담연구소</a></h2>
   <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
 
-    <p><a href="우리아이 1.html">처음 오신 분들께</a></p>
-    <p><a href="우리아이 2.html">상담전문가 소개</a></p>
-    <p><a href="우리아이 3.html">프로그램</a></p>
-    <p><a href="우리아이 4.html">찾아오시는 길</a></p>
+  <p><a href="1aboutus.html">처음 오신 분들께</a></p>
+  <p><a href="2counselor.html">상담전문가 소개</a></p>
+  <p><a href="3programs.html">프로그램</a></p>
+  <p><a href="4location.html">찾아오시는 길</a></p>
+
 </div>
 </body>
 <footer>
