--- a/1aboutus.html
+++ b/1aboutus.html
@@ -3,6 +3,19 @@
 <head>
   <title>우리아이상담연구소 - 첫인사</title>
   <meta charset="utf-8">
+  <style>
+    #list {
+      margin-top:20px;
+      border-top: 2px solid #A4D4B3;
+      border-bottom: 2px solid #A4D4B3;
+      background-color: #CAE5CD;
+      font-family: 'Noto Sans KR', sans-serif
+    }
+    a{
+      color:black;
+      text-decoration:none;
+    }
+  </style>
 </head>
 <body>
 <div align="center">
@@ -10,12 +23,12 @@
   <h2 style="margin-top:-10px; font-family: 'Noto Sans KR', sans-serif;">
     <a href="index.html">우리아이상담연구소</a></h2>
   <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
-
-  <p><a href="1aboutus.html">처음 오신 분들께</a></p>
-  <p><a href="2counselor.html">상담전문가 소개</a></p>
-  <p><a href="3programs.html">프로그램</a></p>
-  <p><a href="4location.html">찾아오시는 길</a></p>
-
+  <div id="list">
+    <p><a href="1aboutus.html" style="text-decoration:underline;">처음 오신 분들께</a></p>
+    <p><a href="2counselor.html">상담전문가 소개</a></p>
+    <p><a href="3programs.html">프로그램</a></p>
+    <p><a href="4location.html">찾아오시는 길</a></p>
+  </div>
  <p>안녕하세요. 초등전문 상담사 허순매입니다.</p>
  <p>사랑하는 자녀를 양육하는데 어려움이 있으신가요? </p>
  <p>아이와 부모님의 마음을 같이 돌보아주는 우리아이상담연구소로 찾아오세요.</p>
