--- a/2counselor.html
+++ b/2counselor.html
@@ -3,6 +3,20 @@
 <head>
   <title>우리아이상담연구소 - 상담전문가</title>
   <meta charset="utf-8">
+  <style>
+    #list {
+      margin-top:20px;
+      margin-bottom:20px;
+      border-top: 2px solid #A4D4B3;
+      border-bottom: 2px solid #A4D4B3;
+      background-color: #CAE5CD;
+      font-family: 'Noto Sans KR', sans-serif
+    }
+    a{
+      color:black;
+      text-decoration:none;
+    }
+  </style>
 </head>
 <body>
 <div align="center">
@@ -10,12 +24,13 @@
   <h2 style="margin-top:-10px; font-family: 'Noto Sans KR', sans-serif;">
     <a href="index.html">우리아이상담연구소</a></h2>
   <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
-
-  <p><a href="1aboutus.html">처음 오신 분들께</a></p>
-  <p><a href="2counselor.html">상담전문가 소개</a></p>
-  <p><a href="3programs.html">프로그램</a></p>
-  <p><a href="4location.html">찾아오시는 길</a></p>
-  <img src="profilepic.png" width="200px" alt="허순매 상담사">
+  <div id="list">
+    <p><a href="1aboutus.html">처음 오신 분들께</a></p>
+    <p><a href="2counselor.html" style="text-decoration:underline;">상담전문가 소개</a></p>
+    <p><a href="3programs.html">프로그램</a></p>
+    <p><a href="4location.html">찾아오시는 길</a></p>
+  </div>
+  <img src="profilepic.png" width="20%" alt="허순매 상담사">
  <p>초등전문 상담사 허순매 소장</p>
 
  <p>약력</p>
