--- a/4location.html
+++ b/4location.html
@@ -3,6 +3,24 @@
 <head>
   <title>우리아이상담연구소 - 찾아오시는 길</title>
   <meta charset="utf-8">
+  <style>
+    #list {
+      margin-top:20px;
+      border-top: 2px solid #A4D4B3;
+      border-bottom: 2px solid #A4D4B3;
+      background-color: #CAE5CD;
+      font-family: 'Noto Sans KR', sans-serif
+    }
+    a{
+      color:black;
+      text-decoration:none;
+    }
+    image{
+      margin-top: 100px;
+    }
+
+
+  </style>
 </head>
 <body>
 <div align="center">
@@ -10,18 +28,20 @@
   <h2 style="margin-top:-10px; font-family: 'Noto Sans KR', sans-serif;">
     <a href="index.html">우리아이상담연구소</a></h2>
   <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
-
-  <p><a href="1aboutus.html">처음 오신 분들께</a></p>
-  <p><a href="2counselor.html">상담전문가 소개</a></p>
-  <p><a href="3programs.html">프로그램</a></p>
-  <p><a href="4location.html">찾아오시는 길</a></p>
-
- <p style="margin-top:50px; font-size:20px;">찾아오시는 길</p>
- <p style="margin-top:-10px;">청주시</p>
-
+  <div id="list">
+    <p><a href="1aboutus.html">처음 오신 분들께</a></p>
+    <p><a href="2counselor.html">상담전문가 소개</a></p>
+    <p><a href="3programs.html">프로그램</a></p>
+    <p><a href="4location.html" style="text-decoration:underline;">찾아오시는 길</a></p>
+  </div>
+ <p style="margin-top:50px; font-size:20px;">상담실 위치</p>
+ <p style="margin-top:-10px; text-decoration:underline">
+   <a href="http://naver.me/GCM8Ap8W">청주시 서원구 구룡산로 364 2층<br>
+   (수곡동 96-15)</a></p>
  <p style="margin-top:50px; font-size:20px;">전화번호</p>
  <p style="margin-top:-10px;"> 010-3910-5164 </p>
-
+ <p style="margin-top:50px; font-size:20px;">이메일</p>
+ <p style="margin-top:-10px;">woori-i-cc@naver.com</p>
 </div>
 
 
