--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="list">
     <p><a href="1aboutus.html">처음 오신 분들께</a></p>
     <p><a href="2counselor.html">상담전문가 소개</a></p>
-    <p><a href="3programs.html">프로그램</a></p>
+    <p><a href="3programs.html">상담 프로그램</a></p>
     <p><a href="4location.html">찾아오시는 길</a></p>
   </div>
 </div>
