--- a/1aboutus.html
+++ b/1aboutus.html
@@ -26,12 +26,16 @@
   <div id="list">
     <p><a href="1aboutus.html" style="text-decoration:underline;">처음 오신 분들께</a></p>
     <p><a href="2counselor.html">상담전문가 소개</a></p>
-    <p><a href="3programs.html">프로그램</a></p>
+    <p><a href="3programs.html">상담 프로그램</a></p>
     <p><a href="4location.html">찾아오시는 길</a></p>
   </div>
- <p>안녕하세요. 초등전문 상담사 허순매입니다.</p>
- <p>사랑하는 자녀를 양육하는데 어려움이 있으신가요? </p>
- <p>아이와 부모님의 마음을 같이 돌보아주는 우리아이상담연구소로 찾아오세요.</p>
+  <p>우리아이상담연구소는 <br>아동의 강점과 자원을 중심으로 순기능을 발휘하도록  도우며,<br>
+  우리아이들이 스스로 자신의 잠재능력을 찾아 <br>건강하고 행복하게 자라기를 바라는 마음으로
+  상담하고 있습니다.</p>
+  <p>소중한 우리자녀들이 아무 탈없이 잘 자라나며 <br>늘 푸른 소나무처럼 뻗어나가기를
+  바라는 마음으로 <br>연구를 하며 노력하고 있습니다.</p>
+  <P>저희는 언제나 아이를 사랑하시는 부모님의 마음과 함께 할 것이며 <br>풍부한 경험과 지식을  갖고
+  상담에 임하여 <br>아동과 가정이 함께 성장할 수 있도록 지원할 것입니다.</p>
 </body>
 <br>
 </div>
