--- a/2counselor.html
+++ b/2counselor.html
@@ -26,24 +26,29 @@
   <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
   <div id="list">
     <p><a href="1aboutus.html">처음 오신 분들께</a></p>
-    <p><a href="2counselor.html" style="text-decoration:underline;">상담전문가 소개</a></p>
-    <p><a href="3programs.html">프로그램</a></p>
+    <p><a href="2counselor.html"
+          style="text-decoration:underline;">상담전문가 소개</a></p>
+    <p><a href="3programs.html">상담 프로그램</a></p>
     <p><a href="4location.html">찾아오시는 길</a></p>
   </div>
   <img src="profilepic.png" width="20%" alt="허순매 상담사">
- <p>초등전문 상담사 허순매 소장</p>
+ <h3>초등전문 상담사 허순매 소장</h3>
 
- <p>약력</p>
- <ul>
-   <li>30여년 간의 초등학교 교사 경력</li>
-   <li>상담학 석사 졸업</li>
-   <li>자격증 취득</li>
- </ul>
+ <h4>약력</h4>
+ <p>
+    서울신사초  외    다수     초등교사로 근무<br>
+    (전)대전서부교육지원청 학습코치(학습상담,정서상담,진로상담<br>
+    (전)대전시교육청 학습코치(학습상담 및 특강
+  </p>
 
-</div>
-
-
-</body>
+  <h4>자격증 취득</h4>
+  <p>
+    전문상담교사 1급 (교육과학기술부)<br>
+    전문상담사 2급 (한국상담학회)<br>
+    임상심리사 2급 (보건복지부)<br>
+    인터넷중독 전문상담사 2급 (한국정보화진흥원)<br>
+    U&I 학습및진로상담전문가 (연우심리개발원)<br>
+    초등1급정교사 (문교부)
 <br>
 
 <footer>
