--- a/3programs.html
+++ b/3programs.html
@@ -26,15 +26,30 @@
   <div id="list">
     <p><a href="1aboutus.html">처음 오신 분들께</a></p>
     <p><a href="2counselor.html">상담전문가 소개</a></p>
-    <p><a href="3programs.html" style="text-decoration:underline;">프로그램</a></p>
+    <p><a href="3programs.html"
+          style="text-decoration:underline;">상담 프로그램
+        </a>
+    </p>
     <p><a href="4location.html">찾아오시는 길</a></p>
   </div>
- <h4>상담프로그램</h4>
- <ul>
-   <li>어린이/청소년 심리상담</li>
-   <li>학습코칭</li>
-   <li>학부모 상담</li>
- </ul>
+ <h4>아동/청소년 심리상담</h4>
+ <p>ADHD 치료 프로그램
+   학교부적응 치료 프로그램<br>
+   사회성 향상 프로그램<br>
+   집중력 향상 프로그램<br>
+   분노 조절 능력 향상 프로그램<br>
+   우울증 치료 프로그램
+ </p>
+ <h4>학습코칭</h4>
+ <p>학습 능력 증진 프로그램<br>
+   나의 꿈 찾기 프로그램<br>
+   스트레스 다루기 및 인내력 증진 프로그램
+ </p>
+ <h4>학부모 상담</h4>
+ <p>올바른 자녀 양육 프로그램<br>
+   부모 자녀 갈등 해소 프로그램<br>
+   자녀와 소통 능력 향상 프로그램
+ </p>
 </div>
 
 
