--- a/1aboutus.html
+++ b/1aboutus.html
@@ -5,40 +5,64 @@
   <meta charset="utf-8">
   <style>
     #list {
-      margin-top:20px;
-      border-top: 2px solid #A4D4B3;
-      border-bottom: 2px solid #A4D4B3;
+      width:70%;
+      margin:20px;
+      border: 2px solid #A4D4B3;
       background-color: #CAE5CD;
-      font-family: 'Noto Sans KR', sans-serif
+      font-family: 'Noto Sans KR', sans-serif;
+      text-align: center;
     }
     a{
       color:black;
       text-decoration:none;
     }
+    #grid {
+      display:grid;
+      grid-template-columns: 220px 1fr;
+    }
+    @media(max-width:800px) {
+      #grid {
+        display:block;
+      }
+      #list {
+        margin-left: auto;
+        margin-right: auto;
+      }
+      img{
+        width:35%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
   </style>
 </head>
 <body>
-<div align="center">
+  <!--
   <p style="font-family: 'Noto Sans KR', sans-serif;">사랑가득 기쁨가득 행복가득</p>
   <h2 style="margin-top:-10px; font-family: 'Noto Sans KR', sans-serif;">
     <a href="index.html">우리아이상담연구소</a></h2>
-  <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
-  <div id="list">
-    <p><a href="1aboutus.html" style="text-decoration:underline;">처음 오신 분들께</a></p>
-    <p><a href="2counselor.html">상담전문가 소개</a></p>
-    <p><a href="3programs.html">상담 프로그램</a></p>
-    <p><a href="4location.html">찾아오시는 길</a></p>
+  -->
+    <center><a href="index.html"><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></a></center>
+  <div id="grid">
+    <div id="list">
+      <h4><a href="1aboutus.html" style="text-decoration:underline;">처음 오신 분들께</a></h4>
+      <h4><a href="2counselor.html">상담전문가 소개</a></h4>
+      <h4><a href="3programs.html">상담 프로그램</a></h4>
+      <h4><a href="4location.html">찾아오시는 길</a></h4>
+    </div>
+    <div>
+    <p>우리아이상담연구소는 <br>아동의 강점과 자원을 중심으로 순기능을 발휘하도록  도우며,<br>
+    우리아이들이 스스로 자신의 잠재능력을 찾아 <br>건강하고 행복하게 자라기를 바라는 마음으로
+    상담하고 있습니다.</p>
+    <p>소중한 우리자녀들이 아무 탈없이 잘 자라나며 <br>늘 푸른 소나무처럼 뻗어나가기를
+    바라는 마음으로 <br>연구를 하며 노력하고 있습니다.</p>
+    <P>저희는 언제나 아이를 사랑하시는 부모님의 마음과 함께 할 것이며 <br>풍부한 경험과 지식을  갖고
+    상담에 임하여 <br>아동과 가정이 함께 성장할 수 있도록 지원할 것입니다.</p>
+    </div>
   </div>
-  <p>우리아이상담연구소는 <br>아동의 강점과 자원을 중심으로 순기능을 발휘하도록  도우며,<br>
-  우리아이들이 스스로 자신의 잠재능력을 찾아 <br>건강하고 행복하게 자라기를 바라는 마음으로
-  상담하고 있습니다.</p>
-  <p>소중한 우리자녀들이 아무 탈없이 잘 자라나며 <br>늘 푸른 소나무처럼 뻗어나가기를
-  바라는 마음으로 <br>연구를 하며 노력하고 있습니다.</p>
-  <P>저희는 언제나 아이를 사랑하시는 부모님의 마음과 함께 할 것이며 <br>풍부한 경험과 지식을  갖고
-  상담에 임하여 <br>아동과 가정이 함께 성장할 수 있도록 지원할 것입니다.</p>
 </body>
 <br>
-</div>
 
 <footer>
   <p style="text-align:center; font-size:14px; font-family:  'Noto Sans KR', sans-serif;">copyright. 우리아이상담연구소</p>
