--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <style>
     #list {
-      margin-top:20px;
-      border-top: 2px solid #A4D4B3;
-      border-bottom: 2px solid #A4D4B3;
+      width:70%;
+      margin:20px;
+      border: 2px solid #A4D4B3;
       background-color: #CAE5CD;
       font-family: 'Noto Sans KR', sans-serif
     }
@@ -19,15 +19,17 @@
 </head>
 <body>
 <div align="center">
+  <!--
   <p style="font-family: 'Noto Sans KR', sans-serif;">사랑가득 기쁨가득 행복가득</p>
   <h2 style="margin-top:-10px; font-family: 'Noto Sans KR', sans-serif;">
     <a href="index.html">우리아이상담연구소</a></h2>
-  <center><img src="logo.png" width="300" alt="우리아이상담연구소 로고"></center>
+  -->
+  <center><a href="index.html"><img src="logo.png" width="300px" alt="우리아이상담연구소 로고"></a></center>
   <div id="list">
-    <p><a href="1aboutus.html">처음 오신 분들께</a></p>
-    <p><a href="2counselor.html">상담전문가 소개</a></p>
-    <p><a href="3programs.html">상담 프로그램</a></p>
-    <p><a href="4location.html">찾아오시는 길</a></p>
+    <h4><a href="1aboutus.html">처음 오신 분들께</a></h4>
+    <h4><a href="2counselor.html">상담전문가 소개</a></h4>
+    <h4><a href="3programs.html">상담 프로그램</a></h4>
+    <h4><a href="4location.html">찾아오시는 길</a></h4>
   </div>
 </div>
 </body>
